--- a/mssql/Dockerfile
+++ b/mssql/Dockerfile
@@ -1,5 +1,14 @@
-FROM mcr.microsoft.com/mssql/server:2019-latest
+FROM mcr.microsoft.com/mssql/server
 
 # Need to create productdb database in container
 
-# COPY setup_my_db.sql
+COPY setupdb.sql setupdb.sql
+COPY entrypoint.sh entrypoint.sh
+
+USER root
+
+RUN chmod +x entrypoint.sh
+RUN chown -R 10001:0 setupdb.sql
+RUN chown -R 10001:0 entrypoint.sh
+
+USER 10001
