--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AuthDemi-75A6C4EB-348E-4B74-8552-16A4AE918BFA;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "LocalDockerConnection": "Server=localhost,1433;Database=ProductsDB;User ID=sa;Password=Passw0rd;Trusted_Connection=False;MultipleActiveResultSets=true"
+    "LocalDockerConnection": "Server=mssql-db,1433;Database=ProductsDB;User ID=sa;Password=Passw0rd;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
